# quattro

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  ui-acceptance-failures.txt  ui-acceptance-progress.txt  vcpkg.json
.claude/: settings.json
.github/workflows/: package-release.yml
docs/Quattro/: 00-文档索引.md  AppLaunchLocker新版自启动管理与独立应用完整方案.md  AppLaunchLocker自启动治理开发方案.md  公共层D2D-DWrite渲染架构.md  后台测试验收实施说明.md
icons/menu/tabler/: README.md
plugins/store/: index.json
resources/: AppLaunchLocker.manifest  AppLaunchLocker.rc  Quattro.rc  QuattroUpdater.rc  VersionResource.h.in  app.manifest  resource.h
screenshots/sort-acceptance/: README.txt
src/: AppLog.cpp  AppLog.h  AppPackageService.cpp  AppPackageService.h  AppStoreConfig.cpp  AppStoreConfig.h  AppStoreCredentialService.cpp  AppStoreCredentialService.h  AppStoreDialog.cpp  AppStoreDialog.h  AppStoreManifest.cpp  AppStoreManifest.h  AppStoreRegistry.cpp  AppStoreRegistry.h  AppStoreService.cpp  AppStoreService.h  AppTransferService.cpp  AppTransferService.h  BuiltinTools.cpp  CatalogDialogLayout.cpp  CatalogDialogLayout.h  Config.cpp  Config.h  ConfigPackageService.cpp  ConfigPackageService.h  DialogLayout.h  Elevation.h  EmbeddedAssetInstaller.cpp  EmbeddedAssetInstaller.h  EmbeddedAssets.h  EmbeddedUpdater.h  GitHubReleaseClient.cpp  GitHubReleaseClient.h  HotKeyEditor.cpp  HotKeyEditor.h  IconService.cpp  JsonValue.cpp  JsonValue.h  Launcher.h  LinkEditDialog.cpp  (+53 more)
src/applaunchlocker/: AdBlockWindow.cpp  AdBlockWindow.h  AppLaunchLockerCore.cpp  AppLaunchLockerCore.h  AppLaunchLockerMain.cpp  AppLaunchLockerWindow.cpp  AppLaunchLockerWindow.h
src/common/: AppLog.cpp  AppLog.h  Elevation.cpp  EmbeddedAssetInstaller.cpp  EmbeddedAssetInstaller.h  EmbeddedAssets.cpp  EmbeddedAssets.h  EmbeddedExecutable.h  EmbeddedExecutableCatalog.cpp.in  EmbeddedExecutableCatalog.h  EmbeddedExecutableManager.cpp  EmbeddedExecutableManager.h  FileDialog.cpp  FileDialog.h  Utilities.cpp  Utilities.h
src/domain/: ClockDisplay.cpp  ClockDisplay.h  Config.cpp  Config.h  ConfigVersion.h  LinkSorting.cpp  LinkSorting.h  MenuCatalog.cpp  MenuCatalog.h  Models.h  PluginRegistry.cpp  PluginRegistry.h  TodoSchedule.cpp  TodoSchedule.h  TrackedContextMenuProviders.cpp  TrackedContextMenuProviders.h
src/services/: ConfigPackageService.cpp  ConfigPackageService.h  ContextMenuProviderIconService.cpp  ContextMenuProviderIconService.h  ExplorerCopyPathContextMenuService.cpp  ExplorerCopyPathContextMenuService.h  ExplorerWebDavUploadContextMenuService.cpp  ExplorerWebDavUploadContextMenuService.h  FileLockQueryService.cpp  FileLockQueryService.h  IconResolverService.cpp  IconResolverService.h  IconService.cpp  IconService.h  Launcher.cpp  LocalHttpServerService.cpp  LocalHttpServerService.h  QuickImportService.cpp  QuickImportService.h  SelectedPathCopyService.cpp  SelectedPathCopyService.h  ShellContextMenuCacheService.cpp  ShellContextMenuCacheService.h  ShellContextMenuRefreshService.cpp  ShellContextMenuRefreshService.h  ShellItemService.cpp  ShellItemService.h  StartupService.cpp  StartupService.h  Storage.cpp  Storage.h  SystemFunctions.cpp  SystemFunctions.h  TerminalContextMenuService.cpp  TerminalContextMenuService.h  UpdateCheckService.cpp  UpdateCheckService.h  UpdateInstaller.cpp  UpdateInstaller.h  UrlIconDownloadService.cpp  (+19 more)
src/theme/: CatalogDialogLayout.cpp  CatalogDialogLayout.h  DialogLayout.h  TablerIconFacade.cpp  Theme.cpp  Theme.h  ThemeFacadeLint.cmake  ThemedControls.cpp  ThemedControls.h  ThemedD2D.cpp  ThemedD2D.h  ThemedFileTransferQueueDialog.cpp  ThemedFileTransferQueueDialog.h  ThemedFormLayout.cpp  ThemedFormLayout.h  ThemedGdiFallback.cpp  ThemedGdiFallback.h  ThemedMessageBox.cpp  ThemedTaskProgressDialog.cpp  ThemedTaskProgressDialog.h  ThemedUi.cpp  ThemedUi.h  ThemedWindowUi.cpp  ThemedWindowUi.h
src/updater/: UpdaterMain.cpp
src/windows/: AboutDialog.cpp  AboutDialog.h  BuiltinTools.cpp  BuiltinTools.h  ConfirmDialog.cpp  ConfirmDialog.h  HotKeyEditor.cpp  HotKeyEditor.h  LinkEditDialog.cpp  LinkEditDialog.h  MainHotKey.cpp  MainHotKey.h  MainTitleBuildMarkerLayout.h  MainWindow.cpp  MainWindow.h  MenuAnchorGeometry.h  QuickImportDialog.cpp  QuickImportDialog.h  SimpleDialogs.cpp  SimpleDialogs.h  ToastFeedback.h  TodoEditDialog.cpp  UpdateCheckDialog.cpp  UpdateCheckDialog.h  UpdateDownloadDialog.cpp  UpdateDownloadDialog.h  UrlEditDialog.cpp  UrlEditDialog.h
tests/: AboutTrayExitAcceptance.cpp  AppLaunchLockerTests.cpp  AppStoreAcceptance.cpp  BuiltinSystemContextMenuAcceptance.cpp  DbProbe.cpp  DbSeed.cpp  DockActivationAcceptance.cpp  HttpServerConfigAcceptance.cpp  HttpServerRuntimeAcceptance.cpp  NoteTodoAcceptance.cpp  SettingsHttpButtonsAcceptance.cpp  SortScreenshotSeed.cpp  ThemeStateProbe.cpp  ToastAcceptance.cpp  TodoBackupJsonCompatibility.cpp  TodoReminderAcceptance.cpp  UiScreenshotAcceptance.cpp  UnitTests.cpp  WebDavAcceptance.cpp
tests/fixtures/: todo-backup-apple-simple.json  todo-backup-v1.json  todo-backup-v2.json
theme/: default.xml
tools/: QuattroTestHarness.ps1  build.ps1  capture-sort-acceptance.ps1  capture-sort-run-asc-menu.ps1  capture-theme-menu-icon-state.ps1  generate-embedded-asset-pack.ps1  generate-embedded-assets.ps1  generate-embedded-executable.ps1  generate-embedded-updater.ps1  generate-tabler-icon-manifest.ps1  generate-theme-assets.ps1  run-dialog-display-tests.ps1  run-display-settings-tests.ps1  run-menu-tests.ps1  run-menu-visual-tests.ps1  run-note-todo-acceptance.ps1  run-plugin-layout-acceptance.ps1  run-plugin-tool-tests.ps1  run-scroll-tests.ps1  run-settings-consumption-tests.ps1  run-tests.ps1  run-theme-state-tests.ps1  run-ui-smoke.ps1  subset-tabler-font.ps1  tabler-icons.json  test-background-acceptance-policy.ps1  test-build-cache-policy.ps1  test-build-help.ps1  test-build-identity.ps1  test-embedded-asset-generator.ps1  test-optional-executable-build.ps1  test-quattro-production-test-isolation.ps1  test-quattro-test-harness.ps1  test-quattro-test-root-guard.ps1  validate-tabler-icon-coverage.ps1
